TAG: vega_ensemblseqload-6-0-12-1
DATE: 03/07/2018
STAFF: sc
CHANGES: TR12662 GMC project
1) vega_ensemblseqload.sh - auto-sequencing

TAG: assemblyseqload-6-0-11-2
DATE: 02/12/2018
STAFF: lec 
CHANGES:
1) TR12776/Ensembl 91

TAG: vega_ensemblseqload-tr12662-BP
DATE: 02/01/2018
STAFF: sc
CHANGES: GMC project

TAG: vega_ensemblseqload-6-0-11-1
DATE: 10/31/2017
STAFF: lec 
CHANGES:
1) TR12660/Ensembl 90

TAG: vega_ensemblseqload-6-0-10-1
DATE: 07/14/2017
STAFF: lec 
CHANGES:
1) TR12610/Ensembl 89

TAG: vega_ensemblseqload-6-0-6-1
DATE: 10/27/2016
STAFF: lec 
CHANGES: TR12422/VEGA 66/ENSEMBL 86
1) 
vega_proteinseqload.config
vega_transcriptseqload.config
SEQ_RELEASE_DATE 
add ncrna
2)
ensembl_proteinseqload.config
ensembl_transcriptseqload.config
SEQ_RELEASE_DATE 

TAG: vega_ensemblseqload-6-0-4-1
TAG: vega_ensemblseqload-6-0-4-3
TAG: vega_ensemblseqload-6-0-4-2
DATE: 07/20/2016, 07/25/2016
STAFF: lec 
CHANGES: TR12354/12382/VEGA 65/Ensembl 85
1) 
vega_proteinseqload.config
vega_transcriptseqload.config
SEQ_RELEASE_DATE 
add ncrna
2)
ensembl_proteinseqload.config
ensembl_transcriptseqload.config
SEQ_RELEASE_DATE 

TAG: vega_ensemblseqload-6-0-4-1
DATE: 06/16/2016
STAFF: lec 
CHANGES:
1) convert to git

TAG: vega_ensemblseqload-6-0-3-2
DATE: 03/21/2016
STAFF: lec 
CHANGES: 
1) TR12220/ENSEMBL 83/84

TAG: vega_ensemblseqload-6-0-3-1
DATE: 03/03/2016
STAFF: lec 
CHANGES: 
1) TR12221/VEGA 64

TAG: vega_ensemblseqload-6-0-2-1
TAG: vega_ensemblseqload-tr12070-1
DATE: 12/02/2015
STAFF: lec 
CHANGES: 
move SEQ_RELEASE_DATE to genemodelload/configs
a) ensembl_proteinseqload.config 
b) ensembl_transcriptseqload.config 
c) vega_proteinseqload.config 
d) vega_transcriptseqload.config

TAG: vega_ensemblseqload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) common.config.default: Don't mail curator log to mgiadmin

TAG: vega_ensemblseqload-tr12070-BP
DATE: 11/2/2015
STAFF: lec
CHANGES:
1) branch point tag for TR12070/TR12116/Ensembl 82
