@@ -1,7 +1,7 @@
 #!/bin/sh 
 
 #
-# Installation script for vega_ensemblseqlaod
+# Installation script for ensemblseqlaod
 #
 ###########################################################################
 
@@ -26,14 +26,10 @@ COMMON_CONFIG=common.config
 # seqload configs
 ENSEMBL_PROT_CONFIG=ensembl_proteinseqload.config
 ENSEMBL_TRANS_CONFIG=ensembl_transcriptseqload.config
-VEGA_PROT_CONFIG=vega_proteinseqload.config
-VEGA_TRANS_CONFIG=vega_transcriptseqload.config
 
 # assocload configs
 ENSEMBL_PROT_ASSOCCONFIG=ensembl_proteinassocload.config
 ENSEMBL_TRANS_ASSOCCONFIG=ensembl_transcriptassocload.config
-VEGA_PROT_ASSOCCONFIG=vega_proteinassocload.config
-VEGA_TRANS_ASSOCCONFIG=vega_transcriptassocload.config
 
 #
 # Make sure common config file exists and source it
