@@ -1,100 +1,0 @@
-#format: sh
-###########################################################################
-#
-#  vega_proteinassocload.config
-#
-#  This file sets up environment variables that are needed for the
-#  VEGA Sequence Protein /Marker data to be handled by the Association loader.
-#
-###########################################################################
-
-###########################################################################
-#
-#  LOAD SPECIFIC SETTINGS
-#
-###########################################################################
-
-#  Path name of the archive, logs, reports and output directories
-FILEDIR=${DATALOADSOUTPUT}/vega/vega_proteinassocload
-ARCHIVEDIR=${FILEDIR}/archive
-LOGDIR=${FILEDIR}/logs
-RPTDIR=${FILEDIR}/reports
-OUTPUTDIR=${FILEDIR}/output
-
-#  Complete path name of the input file
-INFILE_NAME=${DATALOADSOUTPUT}/vega/vega_proteinseqload/output/vega_protein_mkrassoc.txt
-
-#  Set the size of the memory buffer used when reading an input file
-INFILE_BUFFERSIZE=21000000
-
-#  Complete path name of the log files
-LOG_PROC=${LOGDIR}/assocload.proc.log
-LOG_DIAG=${LOGDIR}/assocload.diag.log
-LOG_CUR=${LOGDIR}/assocload.cur.log
-LOG_VAL=${LOGDIR}/assocload.val.log
-
-#  Send debug messages to the diagnostic log (true or false)
-LOG_DEBUG=false
-
-export FILEDIR ARCHIVEDIR LOGDIR RPTDIR OUTPUTDIR
-export INFILE_NAME INFILE_BUFFERSIZE
-export LOG_PROC LOG_DIAG LOG_CUR LOG_VAL LOG_DEBUG
-
-#  The J-Number for the assocload
-J_NUMBER=J:109762
-
-#  The name of the job stream for the load
-JOBSTREAM=vega_proteinassocload
-
-export J_NUMBER JOBSTREAM
-
-#  Association Loader settings
-ASSOCLOAD_FROM_FILE=true
-ASSOCLOAD_TARGET_MGI_TYPE=Marker
-ASSOCLOAD_DELETE_RELOAD=true
-
-export ASSOCLOAD_FROM_FILE
-export ASSOCLOAD_TARGET_MGI_TYPE ASSOCLOAD_DELETE_RELOAD
-
-###########################################################################
-#
-#  BCP MANAGER SETTINGS BY DATABASE
-#
-###########################################################################
-
-#  Settings used to create a BCP manager for the RADAR database
-#  additional settings are in unists.config
-RADAR_BCP_PATH=${OUTPUTDIR}
-RADAR_BCP_OK_TO_OVERWRITE=true
-
-export RADAR_BCP_PATH RADAR_BCP_OK_TO_OVERWRITE
-
-#  Settings used to create a BCP manager for the MGD database
-#  additional settings are in unists.config
-MGD_BCP_PATH=${OUTPUTDIR}
-MGD_BCP_OK_TO_OVERWRITE=true
-
-export MGD_BCP_PATH MGD_BCP_OK_TO_OVERWRITE
-
-###########################################################################
-#
-#  BCP SETTINGS BY TABLE (OVERRIDE BCP MANAGER SETTINGS)
-#
-###########################################################################
-
-#  RADAR database table settings
-#
-MGI_ASSOCIATION_BCP_PRESQL="delete from MGI_Association where _JobStream_key in (select _JobStream_key from APP_JobStream where jobStreamName = '${JOBSTREAM}')"
-
-export MGI_ASSOCIATION_BCP_PRESQL
-
-###########################################################################
-#
-#  MISCELLANEOUS SETTINGS
-#
-###########################################################################
-
-#  The name of the load for the subject of an email notification
-MAIL_LOADNAME="VEGA Protein Sequence/Marker Association Load"
-
-export MAIL_LOADNAME
