@@ -1,133 +1,0 @@
-#format: sh
-#
-#  vega_transcriptseqload.config.default
-#
-#  This file sets up environment variables that are needed for 
-#  processing VEGA transcript sequences
-#
-# The following config settings can change between loads:
-# 1) SEQ_RELEASE_DATE
-# The following config settings change between genome builds:
-# 1) SEQ_RELEASE_NO
-#
-###########################################################################
-
-#
-#  Output File Settings
-#
-
-# this dir holds the following dirs: logs, data, archive, reports
-FILEDIR=${DATALOADSOUTPUT}/vega/vega_transcriptseqload
-
-export FILEDIR
-
-# Full path the the logs, reports, and archive directories
-LOGDIR=${FILEDIR}/logs
-RPTDIR=${FILEDIR}/reports
-OUTPUTDIR=${FILEDIR}/output
-ARCHIVEDIR=${FILEDIR}/archive
-
-export LOGDIR RPTDIR OUTPUTDIR ARCHIVEDIR
-
-#  Complete path name of the log files
-LOG_PROC=${LOGDIR}/vega_transcriptseqload.proc.log
-LOG_DIAG=${LOGDIR}/vega_transcriptseqload.diag.log
-LOG_CUR=${LOGDIR}/vega_transcriptseqload.cur.log
-LOG_VAL=${LOGDIR}/vega_transcriptseqload.val.log
-
-export LOG_PROC LOG_DIAG LOG_CUR LOG_VAL
-
-#
-#  Input File Settings
-#
-
-#  Frameworks expects the value 'STDIN' if jobstream script pipes input to
-#  the application.
-INFILE_NAME=STDIN
-
-# Input file name -
-APP_INFILES="${INPUTDIR}/vega_transcripts.gz ${INPUTDIR}/vega_ncrna.gz"
-
-# Complete path to config file for assocload
-CONFIG_ASSOCLOAD=${VEGA_ENSEMBLSEQLOAD}/vega_transcriptassocload.config
-
-# Path to assocload input file
-INFILE_ASSOCLOAD=${OUTPUTDIR}/vega_transcript_mkrassoc.txt
-
-export INFILE_NAME APP_INFILES CONFIG_ASSOCLOAD INFILE_ASSOCLOAD
-
-#
-# VEGA Transcript Sequence Load specific settings
-#
-
-# Load Reference
-SEQ_JNUMBER=J:109762
-
-# release date - must be updated with each load and should match
-# that of assemblyload 
-SEQ_RELEASE_DATE=2016/09/13
-
-# This is the sequence version in the database.
-# set to mouse build number
-SEQ_RELEASE_NO="GRCm38"
-
-export SEQ_JNUMBER SEQ_RELEASE_DATE SEQ_RELEASE_NO
-
-# SEQ_Sequence sequence type controlled vocab for transcript
-SEQ_TYPE=RNA
-
-# this load's login value for DB table CreatedBy and ModifiedBy
-JOBSTREAM=vega_transcriptseqload
-
-# SEQ_Sequence Provider controlled vocab for SwissProt
-SEQ_PROVIDER="VEGA Transcript"
-
-# logical db name for transcript sequence
-SEQ_LOGICALDB="VEGA Transcript"
-
-# logical db for gene model sequence
-GM_LOGICALDB="VEGA Gene Model"
-
-export SEQ_TYPE JOBSTREAM SEQ_PROVIDER SEQ_LOGICALDB GM_LOGICALDB
-
-#
-# VEGA Transcript Sequence Assoc Load specific settings
-#
-
-# The flavor of assocload we are running
-ASSOCLOADER_SH=${ASSOCLOAD}/bin/AssocLoad2.sh
-
-# jnumber for the accession association load
-# set to '0' (zero) if you DO NOT want to run the association load
-ASSOC_JNUMBER=J:109762
-#ASSOC_JNUMBER=0
-
-ASSOC_OBJECTTYPE=Marker
-
-export ASSOCLOADER_SH ASSOC_JNUMBER ASSOC_OBJECTTYPE
-
-#
-# VEGA Transcript to Genomic Sequence Association Load settings
-#
-
-# name of config file
-CONFIG_SEQASSOC=vegatranscript_seqseqassocload.config
-
-export CONFIG_SEQASSOC
-
-# Path to the seqseq_assocload input file
-INFILE_SEQASSOCLOAD=${OUTPUTDIR}/vega_transcript_seqseqassoc.txt
-
-# Sequence Association Qualifier term
-QUALIFIER="transcribed from "
-
-# 0-based position of the transcript in the description line of the input file
-SEQ_POSITION=3
-
-export INFILE_SEQASSOCLOAD QUALIFIER SEQ_POSITION
-
-#  The name of the load for the subject of an email notification
-MAIL_LOADNAME="VEGA Transcript Sequence Load"
-
-export SEQ_TYPE JOBSTREAM SEQ_PROVIDER SEQ_LOGICALDB MAIL_LOADNAME
-
